# SmartShreds

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  test_window.ui
.github/: FUNDING.yml
.github/workflows/: rust.yml
smartshreds/: Cargo.toml  build.rs
smartshreds/dir/: c (2).txt  c.tsx
smartshreds/src/: errors.rs  lib.rs  main.rs  org.gtk_rs.SmartShreds.gschema.xml  types.rs
smartshreds/src/dup_file_object/: imp.rs
smartshreds/src/dup_file_row/: mod.rs
smartshreds/src/file_type_box/: imp.rs
smartshreds/src/recents_box/: mod.rs
smartshreds/src/resources/: categories.ui  category_box.ui  dashboard.ui  dup_file_row.ui  duplicate_row.ui  file_type_box.ui  onboarding.ui  recents_box.ui  resources.gresource.xml  style.css  window.ui
smartshreds/src/shred/: debug.rs  dir_search.rs  error.rs  hashing.rs  mod.rs
smartshreds/src/shred/analysis/: file_types.rs  hashing.rs  mod.rs
smartshreds/src/shred/debug/: display_dups.rs  dups_systems.rs  mod.rs
smartshreds/src/storage_analysis/: mod.rs
smartshreds/src/storage_analysis_plot/: analysis.rs  imp.rs  mod.rs
smartshreds/src/ui/: mod.rs
smartshreds/src/ui/category_box/: imp.rs  mod.rs
smartshreds/src/ui/dup_file_object/: mod.rs
smartshreds/src/ui/dup_file_row/: imp.rs  mod.rs
smartshreds/src/ui/duplicate/: mod.rs
smartshreds/src/ui/duplicate/duplicate_object/: imp.rs  mod.rs
smartshreds/src/ui/duplicate/duplicate_row/: imp.rs  mod.rs
smartshreds/src/ui/file_type_box/: mod.rs
smartshreds/src/ui/onboarding/: imp.rs  mod.rs
smartshreds/src/ui/recents_box/: imp.rs
smartshreds/src/utils/: analysis.rs  auth.rs  duplicates.rs  mod.rs  preview.rs  recents.rs
smartshreds/src/window/: imp.rs  mod.rs
smartshreds/test_dir/: a.txt
smartshreds/test_dir/sub_dir/: b.txt
smartshreds/tests/: dir_test.rs  file_type_test.rs
