[package]
name = "smartshreds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.6", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.8", package = "gtk4", features = ["v4_12"] }
walkdir = "2.5.0"
sha2 = "0.10.8"
chrono = "0.4.38"
sysinfo = "0.30.13"
plotters = "0.3.3"

[build-dependencies]
glib-build-tools = "0.19.0"

[profile.dev]
opt-level = 1