[package]
name = "smartshreds"
version = "0.1.0"
edition = "2021"
authors = ["Joel Adjetey Komieter"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = "0.7", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9", package = "gtk4", features = ["v4_12"] }
walkdir = "2.5.0"
sha2 = "0.10.8"
chrono = "0.4.38"
sysinfo = "0.30.13"
plotters = "0.3.3"
dirs = "5.0.1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking", "json"] }
tokio = { version = "1", features = ["rt-multi-thread"] }
async-channel = "2.3.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.1"

[build-dependencies]
glib-build-tools = "0.20.0"

[profile.dev]
opt-level = 1
